--- a/main.css
+++ b/main.css
@@ -381,6 +381,14 @@ toggle-nav line {
 
 /*--------------------*/
 
+@media only screen and (max-width: 650px) {
+  .intro-section {
+    height: auto;
+  }
+
+}
+
+
 @media only screen and (min-width: 650px) {
   .intro-section {
     padding-left: 50px;
