Mobile Height try 2

--- a/main.css
+++ b/main.css
@@ -384,6 +384,8 @@ toggle-nav line {
 @media only screen and (max-width: 650px) {
   .intro-section {
     height: auto;
+    padding-top: 125px;
+    padding-bottom: 100px;
   }
 
 }
