--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+html {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
@@ -80,8 +84,9 @@ img:hover {
   transition: 0.07s;
 }
 
+
 .reach-out:hover {
-  box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.1);;
+  box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.1);
   background-color: #1660E6;
   /*filter: blur(5px);*/
 }
@@ -386,6 +391,26 @@ toggle-nav line {
     height: auto;
     padding-top: 125px;
     padding-bottom: 100px;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  .main-menu {
+    height: auto;
+  }
+
+  .menu-page {
+    padding-bottom: 50px;
+    padding-top: 50px;
+    height: auto;
+  }
+
+  .reach-out {
+    background-color: #3B80FE;
+    box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.1);
+    background-color: #1660E6;
   }
 
 }
