--- a/main.css
+++ b/main.css
@@ -389,12 +389,12 @@ toggle-nav line {
 @media only screen and (max-width: 650px) {
   .intro-section {
     height: auto;
-    padding-top: 125px;
+    padding-top: 110px;
     padding-bottom: 100px;
   }
 
   h1 {
-    font-size: 2rem;
+    font-size: 1.9rem;
   }
 
   .main-menu {
@@ -412,6 +412,22 @@ toggle-nav line {
     box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.1);
     background-color: #1660E6;
   }
+
+  toggle-nav {
+    top: 15px;
+    right: 20px;
+    padding: 5px;
+
+  }
+
+  toggle-nav line {
+      border-radius: 25px;
+      width: 30px;
+      height: 3px;
+      outline: 1px solid transparent;
+      background: #4A4A4A;
+  }
+
 
 }
 
