--- a/main.css
+++ b/main.css
@@ -1,12 +1,19 @@
 html {
   box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 body {
-  margin: 0;
+  margin: 0px;
   font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
-   width: 100%;
+  width: 100%;
+  height: 100%;
+  padding: 0px;
 }
 
 a {
