--- a/main.css
+++ b/main.css
@@ -1,19 +1,21 @@
 html {
-  box-sizing: border-box;
-  width: 100%;
+  /*box-sizing: border-box;
+  /*width: 100%;
   height: 100%;
   margin: 0px;
-  padding: 0px;
-  overflow-x: hidden;
+  padding: 0px;*/
+  /*overflow-x: hidden;*/
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
   margin: 0px;
   font-family: 'Poppins', sans-serif;
-  overflow-x: hidden;
+  /*overflow-x: hidden;
   width: 100%;
   height: 100%;
-  padding: 0px;
+  padding: 0px;*/
 }
 
 a {
@@ -88,6 +90,7 @@ img:hover {
   /*font-weight: bold;*/
   color: #FAFAFA;
   background-color: #3B80FE;
+  border-radius: 35px;
   border-style: none;
   padding: 20px 80px;
   transition: 0.07s;
@@ -253,7 +256,7 @@ img:hover {
 
 toggle-nav {
   top: 15px;
-  right: 20px;
+  right: 10px;
   padding: 5px;
   position: absolute;
   cursor: pointer;
@@ -443,25 +446,25 @@ toggle-nav line {
   }
 
   toggle-nav {
-    top: 25px;
-    right: 35px;
-    padding: 5px;
+    /*top: 25px;*/
+    right: 20px;
+    /*padding: 5px;
     position: absolute;
     cursor: pointer;
     display: block;
-    padding: 5px;
+    padding: 5px;*/
   }
 
   toggle-nav line {
-      display: block;
+      /*display: block;
       margin: 0 0 5px;
       position: fixed;
       border-radius: 15px;
-      width: 30px;
+      width: 30px;*/
       height: 4px;
-      outline: 1px solid transparent;
+      /*outline: 1px solid transparent;
       background: #4A4A4A;
-      position: relative;
+      position: relative;*/
   }
 
 }
@@ -502,15 +505,15 @@ toggle-nav line {
 
   toggle-nav {
     top: 25px;
-    right: 35px;
-    padding: 5px;
+    right: 25px;
+    /*padding: 5px;
     position: absolute;
     cursor: pointer;
     display: block;
-    padding: 5px;
+    padding: 5px;*/
   }
 
-  toggle-nav line {
+  /*toggle-nav line {
       display: block;
       margin: 0 0 5px;
       position: fixed;
@@ -520,7 +523,7 @@ toggle-nav line {
       outline: 1px solid transparent;
       background: #4A4A4A;
       position: relative;
-  }
+  }*/
 
 
 @media only screen and (min-width: 1195px) {
