--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
 html {
-  /*box-sizing: border-box;
-  /*width: 100%;
+  box-sizing: border-box;
+  width: 100%;
   height: 100%;
   margin: 0px;
-  padding: 0px;*/
-  /*overflow-x: hidden;*/
+  padding: 0px;
+  overflow-x: hidden;
   overflow-y: scroll; /* has to be scroll, not auto */
   -webkit-overflow-scrolling: touch;
 }
