--- a/main.css
+++ b/main.css
@@ -12,10 +12,10 @@ html {
 body {
   margin: 0px;
   font-family: 'Poppins', sans-serif;
-  /*overflow-x: hidden;
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
-  padding: 0px;*/
+  padding: 0px;
 }
 
 a {
