--- a/main.css
+++ b/main.css
@@ -13,9 +13,9 @@ body {
   margin: 0px;
   font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
-  width: 100%;
-  height: 100%;
-  padding: 0px;
+  /*width: 100%;*/
+  /*height: 100%;*/
+  /*padding: 0px;*/
 }
 
 a {
