--- a/main.css
+++ b/main.css
@@ -427,14 +427,15 @@ toggle-nav line {
   }
 
   .reach-out {
-    background-color: #3B80FE;
     box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.1);
     background-color: #1660E6;
+    font-size: 1rem;
+    border-radius: 35px;
+    border-style: none;
+    padding: 10px 80px;
   }
 
 }
-
-
 
 @media only screen and (min-width: 650px) {
   .intro-section {
